# talentbot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-n-deploy.yaml
talentbot/: chain.py  constants.py  document_loader.py  main.py  models.py  prompts.py  retriever.py  tools.py  utils.py
talentbot/pages/: 📄_Resumes.py  📄_Upload_Resume.py  📊_Statics.py  🛠️_[DEV]_Rebuild_Index.py  🤖_Chat.py
talentbot/templates/: resume.md  resume.txt.jinja
