[tool.poetry]
name = "ta-ai"
version = "0.1.0"
description = ""
authors = ["Huy TQ <5723282+imhuytq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.20"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.6"
tiktoken = "^0.5.2"
google-search-results = "^2.4.2"
google-api-python-client = "^2.118.0"
beautifulsoup4 = "^4.12.3"
html2text = "^2020.1.16"
langchain-google-genai = "^0.0.9"
langchain-google-vertexai = "^0.0.5"
pymupdf = "^1.23.24"
fake-useragent = "^1.4.0"
html5lib = "^1.1"
lxml = "^5.1.0"
eyecite = "^2.6.0"
justopinion = "^0.2.5"
python-ranges = "^1.2.2"
boto3 = "^1.34.71"
unstructured = {extras = ["docx", "msg", "pdf", "xlsx"], version = "^0.14.4"}
langchain-anthropic = "^0.1.4"
streamlit = "^1.34.0"
jinja2 = "^3.1.4"
pydantic = {version = "<2", extras = ["email"]}
sentence-transformers = "^2.7.0"
langchain-text-splitters = "^0.0.1"
opensearch-py = "^2.5.0"
python-magic = "^0.4.27"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
